--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "impostor-online",
+  "name": "inpostor",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Moja gra Inpostor",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "live-server"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.13.0"
-  }
+  "author": "Twoje imię",
+  "license": "MIT"
 }
